# cqrs-example

./: .env  Cargo.toml  Dockerfile  Rocket.toml  diesel-read.toml  diesel-write.toml  docker-compose.yml
migrations/write/00000000000000_diesel_initial_setup/: up.sql
migrations/write/2019-03-15-224709_create_users/: up.sql
scripts/: db-connect.sh  db-migration.sh
src/: main.rs  schema.rs  write_schema.rs
src/Users/: mod.rs
src/Users/Application/Command/: mod.rs  register_user_command.rs
src/Users/Application/Handler/: mod.rs  register_user_handler.rs
src/Users/Domain/: mod.rs  user.rs  user_repository.rs
src/Users/Infrastructure/: mod.rs
src/Users/Infrastructure/Api/: user_controller.rs
src/Users/Infrastructure/Repository/: mod.rs  user_repository.rs
src/Users/Infrastructure/models/write/: mod.rs
src/application/command/: mod.rs  register_user_handler.rs
src/application/event/: mod.rs  registered_user_event.rs  registered_user_listener.rs
src/domain/: user.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: mod.rs  user_controller.rs
src/infrastructure/event_bus/: mod.rs  register.rs
src/infrastructure/models/write/: new_user.rs
src/infrastructure/repository/: connection_manager.rs  user_repository.rs
